Fudge bugfix for spurious vertical scrollbar

--- a/src/pytch-jr-ide.scss
+++ b/src/pytch-jr-ide.scss
@@ -282,6 +282,7 @@
   }
 
   &.isCollapsed {
+    min-height: 27px;
     row-gap: 0px;
     .tab-content {
       display: none;
